Fix layout issues on dialogs and adopt Sevens buttons style.

--- a/dialog.css
+++ b/dialog.css
@@ -76,7 +76,6 @@ body .cke_dialog
 .cke_skin_drupal .cke_dialog_footer
 {
 	text-align: right;
-	border-top: 1px solid #ddd;
 }
 
 .cke_skin_drupal .cke_rtl .cke_dialog_footer
@@ -206,6 +205,10 @@ body .cke_dialog
 	padding: 5px 0px;
 }
 
+.cke_skin_drupal span.cke_dialog_ui_checkbox label {
+  display: inline;
+}
+
 .cke_skin_drupal input.cke_dialog_ui_input_text,
 .cke_skin_drupal input.cke_dialog_ui_input_password
 {
@@ -213,12 +216,13 @@ body .cke_dialog
   border-top-color: #999;
   background: #fff;
   color: #333;
-	padding: 2px 4px;
+	width: 100%;
 }
 
 .cke_skin_drupal div.cke_dialog_ui_input_text,
 .cke_skin_drupal div.cke_dialog_ui_input_password
 {
+  margin-right: 5px;
 }
 
 /* Opera/IE doesn't leave enough padding in text input for cursor to blink in RTL. (#6087) */
@@ -316,47 +320,34 @@ body .cke_dialog
 
 /* button */
 
-/*.cke_skin_drupal a.cke_dialog_ui_button
-{
-	border-collapse: separate;
-	cursor: default;
-
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
-	background: transparent url(images/sprites.png) repeat-x scroll 0 -1069px;
-	_background: none;
-	padding: 5px 0;
-	text-align: center;
-}*/
-
 .cke_skin_drupal a.cke_dialog_ui_button  span
 {
-	-webkit-border-radius: 2px;
-	-webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
-	-webkit-user-select: none;
-	background: -webkit-linear-gradient(#FAFAFA, #F4F4F4 40%, #E5E5E5);
-	border: 1px solid #AAA;
-	color: #444;
-	font-size: inherit;
-	margin-bottom: 0px;
-	min-width: 4em;
-	padding: 3px 12px 3px 12px;
-}
-
-.cke_skin_drupal a.cke_dialog_ui_button span:hover
-{
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-  background: #ebebeb -webkit-linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
-  border-color: #999;
-  color: #222;
+  -moz-border-bottom-colors: none;
+  -moz-border-image: none;
+  -moz-border-left-colors: none;
+  -moz-border-right-colors: none;
+  -moz-border-top-colors: none;
+  background: url("images/buttons.png") repeat-x scroll 0 0 transparent;
+  border-color: #E4E4E4 #D2D2D2 #B4B4B4;
+  border-radius: 20px 20px 20px 20px;
+  border-style: solid;
+  border-width: 1px;
+  color: #5A5A5A;
+  cursor: pointer;
+  font-family: "Lucida Grande",Verdana,sans-serif;
+  font-size: 1.077em;
+  font-weight: normal;
+  margin-bottom: 1em;
+  padding: 4px 17px;
+  text-align: center;
 }
 
 .cke_skin_drupal a.cke_dialog_ui_button span:active
 {
-  -webkit-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.2);
-  background: #ebebeb -webkit-linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
-  color: #333;
+  background: none repeat scroll 0 0 #666666;
+  border-color: #555555;
+  color: #FFFFFF;
+  text-shadow: 0 -1px 0 #222222;
 }
 
 .cke_skin_drupal a.cke_dialog_ui_button span.cke_disabled
